[package]
name = "pandemonium"
version = "5.4.11"
edition = "2021"

[dependencies]
libbpf-rs = { version = "=0.26.1", default-features = false }
libc = "0.2.180"
anyhow = "1.0.65"
clap = { version = "4.5.41", features = ["derive"] }
ctrlc = { version = "3.4.7", features = ["termination"] }
flate2 = "1.1.2"
regex = "1.11.2"

[dev-dependencies]
libc = "0.2.180"

[build-dependencies]
libbpf-cargo = "0.26"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
